# TauCetiWorker

./: .gitignore  README.md  TODO.md  claim.sh  gh-safe-pr-create  loop.sh  pyproject.toml  round.sh  tauceti
.github/workflows/: ci.yml
docs/: BUBBLE_TESTING.md
prompts/: bump.md  fix-ci.md  fix.md  rebase.md  roadmap.md
scripts/: claim.sh  gh-safe-pr-create  git-safe-push
tauceti_worker/: __init__.py  __main__.py  agents.py  cli.py  config.py  constants.py  github.py  intentions.py  loop.py  paths.py  quota.py  review_state.py  round.py  survey.py  tui.py  work_units.py
tests/: agent_cmds.py  claude_config_dir.py  claude_keychain.py  contest_claim.py  dashboard.py  egress.sh  fix_diagnostic.py  fork_authoring.py  github_ratelimit.py  ignore_quota_hardblock.py  inflight_review.py  isolate_home_gh_token.py  isolate_home_paths.py  ledger_blocking.py  lifecycle.sh  mirror_creds.py  parity_selectors.py  quota_cache_fp.py  quota_reason.py  review_daily_cap.py  roadmap_claims.py  round_group_sweep.py  run-all  safe_exists.py  scoreboard_trust.py  spread_candidates.py  spread_review_candidates.py
tests/fixtures/: pr_selectors.json
