[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tauceti"
version = "0.1.0"
description = "Autonomous worker for the FormalFrontier/TauCeti Lean library"
requires-python = ">=3.11"
dependencies = ["rich>=13", "textual>=8,<9"]

[project.scripts]
tauceti = "tauceti_worker.cli:cli_main"

# The worker is the tauceti_worker/ package. Its prompts/ and scripts/ wrappers live at the repo
# root for the `./tauceti` shim (HERE resolves to the repo root in a checkout); the wheel bundles
# them INTO the package (tauceti_worker/{prompts,scripts}) so the same `HERE / "prompts"` lookup
# works once installed (HERE then resolves to the package dir — see tauceti_worker/paths.py).
[tool.hatch.build.targets.wheel]
packages = ["tauceti_worker"]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "tauceti_worker/prompts"
"scripts" = "tauceti_worker/scripts"

[tool.ruff]
target-version = "py311"
line-length = 120
# `tauceti` is the program but has no .py extension, so ruff won't pick it up by default.
extend-include = ["tauceti"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E501 (line length): the formatter owns code width; long inline comments/URLs are left intact.
# UP031 (printf-format): the tests build jq/JSON filter strings with literal braces, where
#   percent-format is clearer than f-strings that would have to escape every brace.
ignore = ["E501", "UP031"]

[tool.ruff.lint.per-file-ignores]
# The ./tauceti shim must put the checkout on sys.path before importing the package, so its
# `from tauceti_worker.cli import ...` deliberately follows a statement (E402).
"tauceti" = ["E402"]
# Each test puts the repo root on sys.path before `import tauceti_worker as tc`, so the package
# import deliberately follows statements (E402).
"tests/*" = ["E402"]
